--- a/templates/article_matter/home.html
+++ b/templates/article_matter/home.html
@@ -6,6 +6,7 @@ Home
     {% if user.is_authenticated %}
         Hi {{ user.username }}!
         <p><a href="{% url 'logout' %}">Log Out</a></p>
+        <li class=""><a href="{% url 'article_new' %}"> New</a></li>
     {% else %}
         <p>You are not logged in</p>
         <a href="{% url 'login' %}">Log In</a> |
